--- a/evaluacion2/player/index.html
+++ b/evaluacion2/player/index.html
@@ -37,7 +37,7 @@
                 <a class="lateral__menu-link" href="#">
                     <img src="images/icon playlist.png" alt="">
                     Playlist
-                    <img src="images/icon more.png" alt="">
+                    <img src="images/icon more.png" class="more" alt="">
                 </a>
             </section>
         </aside>
